manifesto copy text alignment fixed for jess

--- a/assets/styles/application.css
+++ b/assets/styles/application.css
@@ -48,12 +48,12 @@ body {
 #front #manifesto .copy {
 	font-size: 35px;
 	line-height: 60px;
-	text-indent: 140px;
+	/*text-indent: 140px;*/
 	font-weight: 700;
-	text-align: justify;
+	/*text-align: justify;*/
     display: block;
-    margin: 30px 0 0 30px;
-    padding: 30px;
+    margin: 30px 0;
+    /*padding: 30px;*/
 }
 .inner {
 	height: 100%;
